--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -24,8 +24,6 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
         android:orientation="horizontal">
 
         <TextView
@@ -43,7 +41,7 @@
             android:ems="10"
             android:hint="0"
             android:inputType="number"
-            android:maxLength="3"/>
+            android:maxLength="3" />
 
         <TextView
             android:id="@+id/textView3"
@@ -60,7 +58,7 @@
             android:ems="10"
             android:hint="0"
             android:inputType="number"
-            android:maxLength="3"/>
+            android:maxLength="3" />
 
         <Button
             android:id="@+id/makerbutton"
@@ -76,6 +74,6 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="0dp"
         android:layout_marginTop="150dp"
-        android:visibility="gone"
-        app:srcCompat="@drawable/ic_add_location_black_24dp" />
-</RelativeLayout>
+        android:visibility="gone" />
+
+</FrameLayout>
