--- a/app/src/main/res/layout/activity_bluetooth_recive_rssi.xml
+++ b/app/src/main/res/layout/activity_bluetooth_recive_rssi.xml
@@ -14,11 +14,25 @@
         android:gravity="center"
         android:text="BLETester" />
 
-    <Button
-        android:id="@+id/scanner_button"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Scan" />
+        android:layout_height="50dp"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/scanner_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Scan" />
+
+        <Button
+            android:id="@+id/scan_2_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Scan" />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
