--- a/app/src/main/res/layout/crazylayout.xml
+++ b/app/src/main/res/layout/crazylayout.xml
@@ -23,7 +23,44 @@
             android:layout_weight="1"
             android:text="Stop" />
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
+        <Button
+            android:id="@+id/rl0_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="RL0" />
+
+        <Button
+            android:id="@+id/rl1_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="RL1" />
+
+        <Button
+            android:id="@+id/rl2_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="RL2" />
+
+        <Button
+            android:id="@+id/rl3_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="RL3" />
+    </LinearLayout>
+    <Button
+        android:id="@+id/reset_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Reset" />
     <ListView
         android:id="@+id/resultlist"
         android:layout_width="match_parent"
