Add searchitem (unfinish)

--- a/app/src/main/res/layout/activity_search_system.xml
+++ b/app/src/main/res/layout/activity_search_system.xml
@@ -1,28 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SearchSystemActivity">
+    android:orientation="vertical"
+    tools:context=".SearchSystemActivity"
+    android:id="@+id/serachBackground">
 
-    <SearchView
-        android:id="@+id/serachArea"
+    <com.mancj.materialsearchbar.MaterialSearchBar
+        android:id="@+id/searchBar"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true" >
+        android:layout_height="wrap_content"
+        app:mt_hint="Serach Room"
+        app:mt_maxSuggestionsCount="10"
+        app:mt_speechMode="false" />
 
-    </SearchView>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="243dp"
-        android:layout_height="242dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="75dp"
-        android:layout_marginTop="183dp"
-        android:layout_weight="1"
-        app:srcCompat="@drawable/common_google_signin_btn_icon_dark" />
-</RelativeLayout>
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="243dp"
+            android:layout_height="242dp"
+            android:layout_marginStart="75dp"
+            android:layout_marginTop="183dp"
+            android:src="@drawable/common_google_signin_btn_icon_dark"/>
+
+        <ListView
+            android:id="@+id/mListView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="invisible">
+        </ListView>
+
+    </RelativeLayout>
+</LinearLayout>
