--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,5 +16,5 @@
     <color name="jet_black">#222222</color>
     <color name="space_gray">#949494</color>
     <color name="little_light_gray">#f3f3f3</color>
-    <color name="angel_white">#ffffff</color>
+    <color name="angel_white">#f0f0f0</color>
 </resources>
