--- a/app/src/main/res/layout/activity_maps2.xml
+++ b/app/src/main/res/layout/activity_maps2.xml
@@ -23,42 +23,81 @@
         android:orientation="vertical">
 
         <LinearLayout
-            android:id="@+id/searchBarTab"
+            android:id="@+id/search_background"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:background="@color/cardview_light_background"
-            android:orientation="horizontal"
-            android:visibility="gone">
+            android:layout_height="50dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/round_box"
+            android:orientation="vertical">
 
-            <ImageButton
-                android:id="@+id/button_back"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:id="@+id/search_font"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="@null"
-                app:srcCompat="@drawable/ic_chevron_left_black_24dp" />
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:visibility="visible">
 
-            <EditText
-                android:id="@+id/editText_searchroom_map"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_weight="1"
-                android:backgroundTint="@color/space_gray"
-                android:ems="10"
-                android:hint="@string/edittext_hint_search"
-                android:inputType="textPersonName"
-                android:maxLength="30" />
+                <Button
+                    android:id="@+id/button_map_cloesr"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0"
+                    android:background="@android:color/transparent"
+                    android:text="@string/button_back"
+                    android:textColor="@android:color/holo_blue_dark" />
 
-            <Button
-                android:id="@+id/button_searchroom"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/button_searchtext"
-                android:textAllCaps="false" />
+                <TextView
+                    android:id="@+id/text_map_floor"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="Floor11"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+
+                <ImageButton
+                    android:id="@+id/button_map_start_search"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@android:color/transparent"
+                    android:scaleX="0.5"
+                    android:scaleY="0.5"
+                    app:srcCompat="@drawable/ic_magnify_black_48dp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/search_backend"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:visibility="gone">
+
+                <EditText
+                    android:id="@+id/editText_search_place"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:ems="10"
+                    android:hint="@string/button_searchtext"
+                    android:inputType="textPersonName"
+                    android:maxLength="10" />
+
+                <ImageButton
+                    android:id="@+id/button_search_closer"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0"
+                    android:background="@android:color/transparent"
+                    android:scaleX="0.5"
+                    android:scaleY="0.5"
+                    app:srcCompat="@drawable/ic_magnify_black_48dp" />
+            </LinearLayout>
+
         </LinearLayout>
 
         <ListView
@@ -68,17 +107,5 @@
             android:visibility="gone" />
 
     </LinearLayout>
-
-    <ImageButton
-        android:id="@+id/searchImageButton"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="8dp"
-        android:background="@drawable/round_button"
-        android:src="@drawable/ic_search_black_24dp"
-        android:visibility="visible" />
 
 </RelativeLayout>
