--- a/app/src/main/res/layout/activity_search_system.xml
+++ b/app/src/main/res/layout/activity_search_system.xml
@@ -37,4 +37,13 @@
         >
     </ListView>
 
+    <com.mancj.materialsearchbar.MaterialSearchBar
+        style="@style/MaterialSearchBarLight"
+        app:mt_speechMode="true"
+        app:mt_hint="Custom hint"
+        app:mt_maxSuggestionsCount="10"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:id="@+id/searchBar" />
+
 </LinearLayout>
