--- a/app/src/main/res/layout/activity_maps2.xml
+++ b/app/src/main/res/layout/activity_maps2.xml
@@ -42,12 +42,13 @@
 
                 <Button
                     android:id="@+id/button_map_cloesr"
-                    android:layout_width="wrap_content"
+                    android:layout_width="50dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="0"
                     android:background="@android:color/transparent"
                     android:text="@string/button_back"
-                    android:textColor="@android:color/holo_blue_dark" />
+                    android:textColor="@android:color/holo_blue_dark"
+                    android:textAllCaps="false"/>
 
                 <TextView
                     android:id="@+id/text_map_floor"
@@ -61,7 +62,7 @@
 
                 <ImageButton
                     android:id="@+id/button_map_start_search"
-                    android:layout_width="wrap_content"
+                    android:layout_width="50dp"
                     android:layout_height="wrap_content"
                     android:background="@android:color/transparent"
                     android:scaleX="0.5"
