--- a/app/src/main/res/layout/fragment_que.xml
+++ b/app/src/main/res/layout/fragment_que.xml
@@ -1,17 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/text_test"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Welcome to que page"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-</android.support.constraint.ConstraintLayout>
+        android:gravity="center"
+        android:text="Welcome to que page" />
+    <Button
+        android:id="@+id/noti1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Test1" />
+
+    <Button
+        android:id="@+id/noti2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Test2" />
+</LinearLayout>
