--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -84,7 +84,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:ems="10"
-                        android:hint="@string/button_searchtext"
+                        android:hint="@string/searchtext"
                         android:inputType="textPersonName"
                         android:maxLength="10" />
 
