--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="sky_light_blue">#79c7dd</color>
     <color name="supreme_blue">#0e76bd</color>
     <color name="blue_sky">#0066FF</color>
+    <color name="red">#FF0000</color>
 
     <color name="jet_black">#222222</color>
     <color name="space_gray">#949494</color>
