--- a/app/src/main/res/layout/fragment_que.xml
+++ b/app/src/main/res/layout/fragment_que.xml
@@ -6,11 +6,70 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/textView3"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="queing!!" />
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/cardview_queue"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_margin="30dp"
+            app:cardCornerRadius="5dp"
+            app:cardElevation="3dp">
+
+            <LinearLayout
+                android:id="@+id/layout_scan_qr"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="top|center"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/text_que_scan_qr"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="@string/scan_qr"
+                    android:textColor="@color/red" />
+
+                <ImageButton
+                    android:id="@+id/button_que_camera"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@android:color/transparent"
+                    android:scaleX="4"
+                    android:scaleY="4"
+                    app:srcCompat="@drawable/ic_add_a_photo_black_24dp" />
+            </LinearLayout>
+
+            <RelativeLayout
+                android:id="@+id/relative_que_camera_open"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone">
+
+                <com.dlazaro66.qrcodereaderview.QRCodeReaderView
+                    android:id="@+id/qrdecoderview"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:visibility="visible" />
+
+                <ImageButton
+                    android:id="@+id/button_camera_closer"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentTop="true"
+                    android:background="@android:color/transparent"
+                    app:srcCompat="@drawable/ic_close_white_24dp" />
+
+            </RelativeLayout>
+
+        </android.support.v7.widget.CardView>
+    </LinearLayout>
 
     <TextView
         android:id="@+id/text_que_current"
@@ -32,7 +91,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/round_text"
             android:gravity="center"
-            android:text="@string/guide"
+            android:text="@string/not_queing"
             android:textColor="@color/angel_white"
             android:textSize="30sp" />
     </LinearLayout>
@@ -59,7 +118,7 @@
                 android:gravity="center"
                 android:text="@string/not_queing"
                 android:textColor="@color/jet_black"
-                android:textSize="20sp"/>
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/text_que_wait"
