--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".Map.MapFragment">
+    >
 
     <!-- TODO: Update blank fragment layout -->
     <RelativeLayout
@@ -23,20 +23,22 @@
             android:id="@+id/searchBackground"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:visibility="visible">
 
             <LinearLayout
                 android:id="@+id/search_background"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
                 android:layout_marginTop="20dp"
+                android:layout_marginRight="10dp"
                 android:background="@drawable/round_box"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:visibility="visible">
 
                 <LinearLayout
-                    android:id="@+id/search_font"
+                    android:id="@+id/search_font_2"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
@@ -44,26 +46,79 @@
                     android:visibility="visible">
 
                     <ImageButton
-                        android:id="@+id/button_map_menu_bar"
+                        android:id="@+id/button_background"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:background="@android:color/transparent"
+                        app:srcCompat="@drawable/ic_android_black_24dp" />
+
+                    <TextView
+                        android:id="@+id/text_show_search"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginLeft="10dp"
+                        android:layout_weight="1"
+                        android:gravity="left|center"
+                        android:text="@string/searchtext"
+                        android:textColor="@android:color/darker_gray" />
+
+                    <ImageButton
+                        android:id="@+id/button_search_delete_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:background="@android:color/transparent"
+                        android:scaleX="0.5"
+                        android:scaleY="0.5"
+                        android:visibility="gone"
+                        app:srcCompat="@drawable/ic_close_black_48dp" />
+
+                    <TextView
+                        android:id="@+id/line_1"
+                        android:layout_width="2dp"
+                        android:layout_height="40dp"
+                        android:background="@android:color/darker_gray"
+                        android:visibility="visible" />
+
+                    <ImageButton
+                        android:id="@+id/button_navigation"
                         android:layout_width="50dp"
                         android:layout_height="match_parent"
                         android:background="@android:color/transparent"
-                        app:srcCompat="@drawable/ic_dehaze_black_24dp" />
+                        android:visibility="visible"
+                        app:srcCompat="@drawable/ic_navigation_skyblue_24dp" />
+                </LinearLayout>
 
-                    <TextView
-                        android:id="@+id/text_map_floor"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:text="Floor11"
-                        android:textSize="16sp"
-                        android:textStyle="bold" />
+                <LinearLayout
+                    android:id="@+id/search_back_2"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    android:visibility="gone">
 
                     <ImageButton
-                        android:id="@+id/button_map_start_search"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content"
+                        android:id="@+id/search_back_to_font"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginLeft="10dp"
+                        android:background="@android:color/transparent"
+                        app:srcCompat="@drawable/ic_chevron_left_black_24dp" />
+
+                    <EditText
+                        android:id="@+id/editText_search_place_2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:background="@android:color/transparent"
+                        android:ems="10"
+                        android:hint="@string/searchtext"
+                        android:inputType="textPersonName" />
+
+                    <ImageButton
+                        android:id="@+id/button_search"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
                         android:background="@android:color/transparent"
                         android:scaleX="0.5"
                         android:scaleY="0.5"
@@ -71,32 +126,38 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:id="@+id/search_backend"
+                    android:id="@+id/navigation_background"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:orientation="horizontal"
                     android:visibility="gone">
 
-                    <EditText
-                        android:id="@+id/editText_search_place"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:ems="10"
-                        android:hint="@string/searchtext"
-                        android:inputType="textPersonName"
-                        android:maxLength="10" />
-
                     <ImageButton
-                        android:id="@+id/button_search_closer"
+                        android:id="@+id/navigation_back_to_search"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="0"
+                        android:layout_height="match_parent"
                         android:background="@android:color/transparent"
-                        android:scaleX="0.5"
-                        android:scaleY="0.5"
-                        app:srcCompat="@drawable/ic_magnify_black_48dp" />
+                        app:srcCompat="@drawable/ic_chevron_left_black_24dp" />
+
+                    <EditText
+                        android:id="@+id/editText_navigation"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginStart="10dp"
+                        android:layout_weight="1"
+                        android:background="@android:color/transparent"
+                        android:ems="10"
+                        android:hint="@string/guide_to"
+                        android:inputType="textPersonName" />
+
+                    <Button
+                        android:id="@+id/button_set_navigation"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:text="@string/guide"
+                        android:textAllCaps="false" />
+
                 </LinearLayout>
 
             </LinearLayout>
