--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -168,6 +168,12 @@
                 android:layout_height="match_parent"
                 android:visibility="gone" />
 
+            <ListView
+                android:id="@+id/ListViewRoomName"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone" />
+
         </LinearLayout>
     </RelativeLayout>
 
